# yodawg

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
src/: App.css  App.tsx  CreateVmDialog.tsx  EditVmDialog.tsx  SettingsFields.tsx  SnapshotsDialog.tsx  VncViewer.tsx  api.ts  novnc.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/installer/: hooks.nsh
src-tauri/src/: lib.rs  main.rs  proc_job.rs  procutil.rs  qemu.rs  qmp.rs  session.rs  vm.rs
