[package]
name = "yodawg"
version = "0.2.9"
description = "A friendly GUI wrapper around QEMU"
authors = ["Jeff Aigner <jeff.aigner@gmail.com>"]
license = "MIT"
repository = "https://github.com/jaigner-hub/yodawg"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yodawg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows-only: process APIs to check liveness of and terminate QEMU VMs that
# outlive the app, so a relaunch can reattach to them (see procutil.rs).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

